enhance: Make network randomization occur with greater manipulation per mutation